[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cpython-asr"
version = "0.1.0"
description = "Aggregate Scalar Replacement (ASR) for CPython: a minimal AST-level port of FOL's loop-carried record-accumulator unboxing pass, gated by a world guard on importlib.reload."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["asr*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
